# ream-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: codemods.rs  commands.rs  doctor.rs  generator.rs  main.rs  scaffold.rs
tests/: generator_test.rs
