[package]
name = "ream-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Ream CLI — Rust-native command-line tool for the Ream framework"
repository = "https://github.com/C9up/ream-cli"

[[bin]]
name = "ream"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
