[package]
name = "ream-cli"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Ream CLI — Rust-native command-line tool for the Ream framework"
repository = "https://github.com/C9up/ream-cli"

[[bin]]
name = "ream"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite"] }
dotenvy = "0.15"

[profile.release]
opt-level = "z"
lto = true
strip = true
